# cfptime-rs

./: Cargo.toml  LICENSE  README.md
cfptime_api/: Cargo.toml  README.md
cfptime_api/src/: lib.rs
examples/: all-cfps.rs  all-confs.rs  cfp.rs  conf.rs  upcoming.rs
src/: lib.rs
src/cfps/: mod.rs
src/http/: mod.rs
