[package]
name = "cfptime"
version = "0.1.0"
authors = ["Maverick Kaung <mavjs01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
