[package]
name = "cfptime"
version = "0.1.0"
authors = ["Maverick Kaung <mavjs01@gmail.com>"]
license = "MIT"
description = "A library to interface with cfptime.org API."
repository = "https://github.com/mavjs/cfptime.rs"
readme = "README.md"
keywords = ["cfptime", "conferences"]
edition = "2018"
exclude = [
    "testdata/*",
    "src/upcoming/*",
    "src/confs/*",
    "src/main.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
