[package]
name = "cfptime"
version = "0.1.0"
edition = "2021"
authors = ["Maverick Kaung <mavjs01@gmail.com>"]
license = "MIT"
description = "A library to interface with cfptime.org API."
repository = "https://github.com/mavjs/cfptime.rs"
readme = "README.md"
keywords = ["cfptime", "conferences"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
reqwest-middleware = "0.2.3"
reqwest-retry = "0.2.3"
reqwest-tracing = { version = "0.4.6", features = ["opentelemetry_0_18"] }
serde = { version = "1.0.188", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
