[package]
name = "cfptime-api"
version = "0.1.0"
authors = ["Maverick Kaung <mavjs01@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library to interface with cfptime.org API."
repository = "https://github.com/mavjs/cfptime.rs"
readme = "README.md"
documentation = "https://docs.rs/cfptime-api"
keywords = ["cfptime", "conferences"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
